--- a/notes-app-back-end/package.json
+++ b/notes-app-back-end/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.0",
+    "dotenv": "^16.0.0",
     "joi": "^17.6.0",
-    "nanoid": "^3.1.20"
+    "nanoid": "^3.1.20",
+    "pg": "^8.7.3"
   },
   "description": ""
 }
