--- a/Proyek Pertama/OpenMusik API V1/package.json
+++ b/Proyek Pertama/OpenMusik API V1/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start-prod": "NODE_ENV=production node ./src/server.js",
     "start-dev": "nodemon ./src/server.js"
   },
   "keywords": [],
@@ -11,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
+    "dot": "^1.1.3",
+    "dotenv": "^16.0.0",
+    "env": "^0.0.2",
     "joi": "^17.6.0",
     "nanoid": "^3.3.2",
     "nodemon": "^2.0.15",
