--- a/Proyek Pertama/OpenMusik API V1/package.json
+++ b/Proyek Pertama/OpenMusik API V1/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start-prod": "NODE_ENV=production node ./src/server.js",
-    "start-dev": "nodemon ./src/server.js"
+    "start-dev": "nodemon ./src/server.js",
+    "migrate": "node-pg-migrate"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "env": "^0.0.2",
     "joi": "^17.6.0",
     "nanoid": "^3.3.2",
+    "node-pg-migrate": "^6.2.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3"
   }
