--- a/Proyek Pertama/OpenMusik API V1/package.json
+++ b/Proyek Pertama/OpenMusik API V1/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start-prod": "NODE_ENV=production node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
-    "migrate": "node-pg-migrate"
+    "migrate": "node-pg-migrate",
+    "lint": "eslint ./"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +22,10 @@
     "node-pg-migrate": "^6.2.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
