--- a/Proyek Pertama/OpenMusik API V1/.eslintrc.json
+++ b/Proyek Pertama/OpenMusik API V1/.eslintrc.json
@@ -12,5 +12,9 @@
         "ecmaVersion": "latest"
     },
     "rules": {
+        "no-console": "off",
+        "linebreak-style": "off",
+        "no-underscore-dangle": "off",
+        "camelcase": "off"
     }
 }
