--- a/Proyek Kedua/OpenMusik API V2/package.json
+++ b/Proyek Kedua/OpenMusik API V2/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
+    "bcrypt": "^5.0.1",
     "dot": "^1.1.3",
     "dotenv": "^16.0.0",
     "env": "^0.0.2",
