--- a/Proyek Kedua/OpenMusik API V2/package.json
+++ b/Proyek Kedua/OpenMusik API V2/package.json
@@ -7,7 +7,7 @@
     "start-prod": "NODE_ENV=production node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
     "migrate": "node-pg-migrate",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src --fix"
   },
   "keywords": [],
   "author": "",
