--- a/Proyek Kedua/OpenMusik API V2/.eslintrc.json
+++ b/Proyek Kedua/OpenMusik API V2/.eslintrc.json
@@ -15,6 +15,7 @@
         "no-console": "off",
         "linebreak-style": "off",
         "no-underscore-dangle": "off",
-        "camelcase": "off"
+        "camelcase": "off",
+        "max-len": ["error", { "code": 200 }]
     }
 }
