--- a/Proyek Kedua/OpenMusik API V2/.eslintrc.json
+++ b/Proyek Kedua/OpenMusik API V2/.eslintrc.json
@@ -16,6 +16,6 @@
         "linebreak-style": "off",
         "no-underscore-dangle": "off",
         "camelcase": "off",
-        "max-len": ["error", { "code": 200 }]
+        "max-len": "off"
     }
 }
